[package]
name = "firecrawl-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
firecrawl = "^1.0"
tokio = { version = "^1", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.6"
dotenv = "0.15"